/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'maven-publish'
    id 'application'
}

compileJava {
    options.encoding = 'UTF-8'
    options.incremental = true
    options.fork = true
    options.failOnError = false
}

jar {
  manifest {
    attributes(
      'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
      'Main-Class': 'com.test.Test'
    )
  }
}

repositories {
    mavenLocal()
    maven {
        url = uri('http://repo.maven.apache.org/maven2')
    }
}

dependencies {
    implementation 'org.apache.commons:commons-collections4:4.4'
    testImplementation 'junit:junit:4.13.1'
}

group = 'com.mtn.training'
version = '1.0'
sourceCompatibility = '1.8'
mainClassName = "com.test.Test"

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}

task hello (dependsOn: 'test-custom'){
        doLast {
            println 'hello'
        }
}

task 'test-custom' (dependsOn: 'build-custom') {
    if (tasks.compileJava.didWork) {
        commandLine ['java', '-jar', jar.archiveFile.get()]
        }
}

task 'build-custom' (type: Jar) {
    manifest {
        attributes(
            'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
            'Main-Class': 'com.test.Test')
        }
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } } {
        exclude "META-INF/*.SF"
        exclude "META-INF/*.DSA"
    }
    with jar
}

